--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 </nav>
 </header>
 <main class=main>
+Pages(1)
 <article class="first-entry home-info">
 <header class=entry-header>
 <h1>NUS Greyhats</h1>
@@ -106,11 +107,17 @@
 </div>
 </footer>
 </article>
-<footer class=page-footer>
-<nav class=pagination>
-<a class=next href=https://lucid-kepler-3ccdfc.netlify.app/page/2/>Next Page »</a>
-</nav>
-</footer>
+<article class=post-entry>
+<header class=entry-header>
+<h2>New Website
+</h2>
+</header>
+<section class=entry-content>
+<p>We are back with a brand new site!</p>
+</section>
+<footer class=entry-footer>October 2, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;NUS Greyhats</footer>
+<a class=entry-link aria-label="post link to New Website" href=https://lucid-kepler-3ccdfc.netlify.app/posts/new-site/></a>
+</article>
 </main>
 <footer class=footer>
 <span>&copy; 2021 <a href=https://lucid-kepler-3ccdfc.netlify.app/>NUS Greyhats</a></span>
