--- a/404.html
+++ b/404.html
@@ -7,17 +7,17 @@
 <meta name=keywords content>
 <meta name=description content="NUS Greyhats">
 <meta name=author content="NUS Greyhats">
-<link rel=canonical href=https://lucid-kepler-3ccdfc.netlify.app/404.html>
+<link rel=canonical href=https://nusgreyhats.org/404.html>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
 <link crossorigin=anonymous href=/assets/css/stylesheet.min.4fe5f047d5d9bf8189a82c05d2f8b5d5ff9d22b736179de9a6ce06f7af4ebe42.css integrity="sha256-T+XwR9XZv4GJqCwF0vi11f+dIrc2F53pps4G969OvkI=" rel="preload stylesheet" as=style>
 <link rel=preload href=/greyhats-dark.png as=image>
-<link rel=icon href=https://lucid-kepler-3ccdfc.netlify.app/greyhats.png>
-<link rel=icon type=image/png sizes=16x16 href=https://lucid-kepler-3ccdfc.netlify.app/greyhats.png>
-<link rel=icon type=image/png sizes=32x32 href=https://lucid-kepler-3ccdfc.netlify.app/greyhats.png>
-<link rel=apple-touch-icon href=https://lucid-kepler-3ccdfc.netlify.app/greyhats.png>
-<link rel=mask-icon href=https://lucid-kepler-3ccdfc.netlify.app/greyhats.png>
+<link rel=icon href=https://nusgreyhats.org/greyhats.png>
+<link rel=icon type=image/png sizes=16x16 href=https://nusgreyhats.org/greyhats.png>
+<link rel=icon type=image/png sizes=32x32 href=https://nusgreyhats.org/greyhats.png>
+<link rel=apple-touch-icon href=https://nusgreyhats.org/greyhats.png>
+<link rel=mask-icon href=https://nusgreyhats.org/greyhats.png>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
@@ -27,9 +27,9 @@
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="NUS Greyhats">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://lucid-kepler-3ccdfc.netlify.app/404.html"><meta property="og:image" content="https://lucid-kepler-3ccdfc.netlify.app/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="NUS Greyhats">
+<meta property="og:url" content="https://nusgreyhats.org/404.html"><meta property="og:image" content="https://nusgreyhats.org/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="NUS Greyhats">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://lucid-kepler-3ccdfc.netlify.app/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
+<meta name=twitter:image content="https://nusgreyhats.org/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="NUS Greyhats">
 </head>
@@ -38,7 +38,7 @@
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/ accesskey=h title="NUS Greyhats (Alt + H)">
+<a href=https://nusgreyhats.org/ accesskey=h title="NUS Greyhats (Alt + H)">
 <img src=/greyhats-dark.png alt=logo aria-label=logo id=logo height=35>
 <script>localStorage.getItem("pref-theme")==="light"?document.getElementById("logo").src="/greyhats.png":document.getElementById("logo").src="/greyhats-dark.png"</script>NUS Greyhats</a>
 <span class=logo-switches>
@@ -48,27 +48,27 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/team title="the team">
+<a href=https://nusgreyhats.org/team title="the team">
 <span>the team</span>
 </a>
 </li>
 <li>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/secweds title=secweds>
+<a href=https://nusgreyhats.org/secweds title=secweds>
 <span>secweds</span>
 </a>
 </li>
 <li>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/resources/ title=resources>
+<a href=https://nusgreyhats.org/resources/ title=resources>
 <span>resources</span>
 </a>
 </li>
 <li>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/tags/ title=tags>
+<a href=https://nusgreyhats.org/tags/ title=tags>
 <span>tags</span>
 </a>
 </li>
 <li>
-<a href=https://lucid-kepler-3ccdfc.netlify.app/search/ title="search (Alt + /)" accesskey=/>
+<a href=https://nusgreyhats.org/search/ title="search (Alt + /)" accesskey=/>
 <span>search</span>
 </a>
 </li>
@@ -79,7 +79,7 @@
 <div class=not-found>404</div>
 </main>
 <footer class=footer>
-<span>&copy; 2021 <a href=https://lucid-kepler-3ccdfc.netlify.app/>NUS Greyhats</a></span>
+<span>&copy; 2021 <a href=https://nusgreyhats.org/>NUS Greyhats</a></span>
 <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
