deploy: fcac8e5ed891aaf421fda66cadba7202c65b50e5

--- a/secweds/index.html
+++ b/secweds/index.html
@@ -160,7 +160,7 @@
 </li>
 <li>
 <p class=secwed-talk-title>Dirty Deeds Done Dirt Cheap</p>
-<p class=secwed-talk-speaker>by Wong Wai Tuck (Express VPN)</p>
+<p class=secwed-talk-speaker>by Wong Wai Tuck (SMU)</p>
 </li>
 </ul>
 </h3>
