deploy: 1a0116a2b50a1b0ab8e850ce6f041c448de774f9

--- a/resources/index.html
+++ b/resources/index.html
@@ -110,7 +110,7 @@
 <p class=workshop-desc>In this video, we learn the basics of return-oriented programming.</p>
 </a>
 <a class=workshop href="https://www.youtube.com/watch?v=5FHA3cz0z1U&list=PLceyrQSWkM_dmovwxnlQMtgNkhRgegycX&index=5" target=_blank>
-<h4>Intro to Return-Oriented Programming</h4>
+<h4>Modern Shellcode</h4>
 <span class=workshop-orgs>Akash and Arun</span>
 <p class=workshop-desc>Strategies on writing shellcode by Akash and Arun.</p>
 </a>
