deploy: a65f2312b998353ccfb1e6c730a537efb7bd24ec

--- a/secweds/index.html
+++ b/secweds/index.html
@@ -94,11 +94,11 @@
 <h3 class=secwed-entry-title>
 <ul>
 <li>
-<p class=secwed-talk-title>TBD</p>
-<p class=secwed-talk-speaker>by Vicky Ray Khan (Palo Alto Networks)</p>
+<p class=secwed-talk-title>SecWed Mini CTF</p>
+<p class=secwed-talk-speaker>by N/A</p>
 </li>
 <li>
-<p class=secwed-talk-title>TBD</p>
+<p class=secwed-talk-title>Source Engine code auditing adventure</p>
 <p class=secwed-talk-speaker>by Bien (SEA Group)</p>
 </li>
 </ul>
@@ -119,7 +119,7 @@
 <p class=secwed-talk-speaker>by Tan Jia Le (Greyhats)</p>
 </li>
 <li>
-<p class=secwed-talk-title>TBD</p>
+<p class=secwed-talk-title>So you want to be a Malware Reverse Engineer (RE) ?</p>
 <p class=secwed-talk-speaker>by Mark Lim (Palo Alto Networks)</p>
 </li>
 </ul>
@@ -131,20 +131,20 @@
 <h3 class=secwed-entry-title>
 <ul>
 <li>
-<p class=secwed-talk-title>TBD (Crypto)</p>
+<p class=secwed-talk-title>Cryptography - Diophantine equation</p>
 <p class=secwed-talk-speaker>by Tan Kel Zin (Greyhats)</p>
 </li>
 <li>
-<p class=secwed-talk-title>TBD (Forensics)</p>
+<p class=secwed-talk-title>A practical approach to Image Forensics</p>
 <p class=secwed-talk-speaker>by Chan Jian Hao (Greyhats)</p>
 </li>
 <li>
-<p class=secwed-talk-title>TBD (XXE)</p>
-<p class=secwed-talk-speaker>by Chong Jin Hwa Brandon (Greyhats)</p>
+<p class=secwed-talk-title>Hoodwinked</p>
+<p class=secwed-talk-speaker>by Nigel Tan (Greyhats)</p>
 </li>
 <li>
-<p class=secwed-talk-title>TBD (LSB Steganography)</p>
-<p class=secwed-talk-speaker>by Nigel Tan (Greyhats)</p>
+<p class=secwed-talk-title>An introduction to XXE attacks</p>
+<p class=secwed-talk-speaker>by Chong Jin Hwa Brandon (Greyhats)</p>
 </li>
 </ul>
 </h3>
