deploy: 748e6799ae2ce9b5d4ab21d26a555be7bbbf0429

--- a/secweds/index.html
+++ b/secweds/index.html
@@ -99,7 +99,7 @@
 </li>
 <li>
 <p class=secwed-talk-title>SecWed Mini CTF</p>
-<p class=secwed-talk-speaker>by N/A</p>
+<p class=secwed-talk-speaker>by NUS Greyhats</p>
 </li>
 </ul>
 </h3>
