deploy: 618d98dd6909a7fb43fafde76ca311261fc72e11

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.9cbf8d877bdeaff412b2c76b44bfd4c03eaf3f75d8dcd653f38db2c34f0ebd2c.css integrity="sha256-nL+Nh3ver/QSssdrRL/UwD6vP3XY3NZT842yw08OvSw=" rel="preload stylesheet" as=style>
+<link rel=preconnect href=https://fonts.googleapis.com>
+<link rel=preconnect href=https://fonts.gstatic.com crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel=stylesheet>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel=stylesheet>
+<link crossorigin=anonymous href=/assets/css/stylesheet.min.b268fb3bd1950526ba32df2898e8dfc3171f0fecdf09cd6945557b277f0eecf8.css integrity="sha256-smj7O9GVBSa6Mt8omOjfwxcfD+zfCc1pRVV7J38O7Pg=" rel="preload stylesheet" as=style>
 <link rel=preload href=/greyhats-dark.png as=image>
 <link rel=icon href=https://nusgreyhats.org/greyhats.png>
 <link rel=icon type=image/png sizes=16x16 href=https://nusgreyhats.org/greyhats.png>
@@ -108,11 +112,22 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Basic LLDB Scripting
+</h2>
+</header>
+<section class=entry-content>
+<p>Basic knowledge to get started with LLDB scripting</p>
+</section>
+<footer class=entry-footer>November 1, 2021&nbsp;·&nbsp;6 min&nbsp;·&nbsp;daniellimws</footer>
+<a class=entry-link aria-label="post link to Basic LLDB Scripting" href=https://nusgreyhats.org/posts/writeups/basic-lldb-scripting/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>New Website
 </h2>
 </header>
 <section class=entry-content>
-<p>We are back with a brand new site!</p>
+<p>Introducing our new website</p>
 </section>
 <footer class=entry-footer>October 2, 2021&nbsp;·&nbsp;1 min&nbsp;·&nbsp;NUS Greyhats</footer>
 <a class=entry-link aria-label="post link to New Website" href=https://nusgreyhats.org/posts/new-site/></a>
